// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeader Style tests should render with condensed styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
  color: #5C656F;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  vertical-align: middle;
  font-size: 13px;
  line-height: 20px;
  padding: 12px 16px;
  padding: 8px 16px;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
  scope="col"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with default styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
  color: #5C656F;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
  scope="col"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with hovered styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
  background-color: #FAFBFC;
  color: #5C656F;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
  scope="col"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with row styles 1`] = `
.circuit-0 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
}

<th
  class="circuit-0 circuit-1"
  data-testid="table-header"
  scope="row"
>
  Foo
</th>
`;

exports[`TableHeader Style tests should render with sortable styles 1`] = `
.circuit-4 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
  color: #5C656F;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-4:hover {
  background-color: #FAFBFC;
  color: #3388FF;
}

.circuit-4:hover > span {
  opacity: 1;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 10px;
  width: 5px;
  left: 12px;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  fill: #3388FF;
}

.circuit-0 {
  margin-top: 2px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

<th
  aria-sort="none"
  class="circuit-4 circuit-5"
  data-testid="table-header"
  scope="col"
>
  <span
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    >
      arrow.svg
    </div>
    <div>
      arrow.svg
    </div>
  </span>
  Foo
</th>
`;

exports[`TableHeader Style tests sortable + sorted should render with sortable + sorted ascending styles 1`] = `
.circuit-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 10px;
  width: 5px;
  left: 12px;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  fill: #3388FF;
}

.circuit-2 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
  color: #5C656F;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-2:hover {
  background-color: #FAFBFC;
  color: #3388FF;
}

.circuit-2:hover > span {
  opacity: 1;
}

.circuit-2 > span {
  opacity: 1;
}

<th
  aria-sort="ascending"
  class="circuit-2 circuit-3"
  data-testid="table-header"
  scope="col"
>
  <span
    class="circuit-0 circuit-1"
  >
    <div>
      arrow.svg
    </div>
  </span>
  Foo
</th>
`;

exports[`TableHeader Style tests sortable + sorted should render with sortable + sorted descending styles 1`] = `
.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 10px;
  width: 5px;
  left: 12px;
  opacity: 0;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  fill: #3388FF;
}

.circuit-0 {
  margin-top: 2px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.circuit-4 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D8DDE1;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  transition: background-color 200ms ease-in-out,color 200ms ease-in-out;
  white-space: nowrap;
  color: #5C656F;
  font-size: 13px;
  font-weight: 700;
  padding: 8px 24px;
  vertical-align: middle;
  cursor: pointer;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.circuit-4:hover {
  background-color: #FAFBFC;
  color: #3388FF;
}

.circuit-4:hover > span {
  opacity: 1;
}

.circuit-4 > span {
  opacity: 1;
}

<th
  aria-sort="descending"
  class="circuit-4 circuit-5"
  data-testid="table-header"
  scope="col"
>
  <span
    class="circuit-2 circuit-3"
  >
    <div
      class="circuit-0 circuit-1"
    >
      arrow.svg
    </div>
  </span>
  Foo
</th>
`;
